--- a/NizarAR.html
+++ b/NizarAR.html
@@ -17,7 +17,7 @@
 
 <body>
   <div id="ciao"></div>
-
+  <button style="position:absolute; top:20px; left:20px; z-index:99" onclick=ruota()>ruota</button>
   <script>
     
     function ruota(){
@@ -33,10 +33,13 @@
     // AR3D.sfera("s1",centro,1,{colore:"red"});
     AR3D.punto("s2",punto,{colore:"blue",spessore:0.1});
      AR3D.punto("s3",punto1,{colore:"green",spessore:0.1});
-     //AR3D.vettore("s1",punto,{colore:"red"});
-     //AR3D.vettore("s2",punto1,{colore:"green"});
-     //AR3D.vettore("s3",centro,{colore:"blue"});
+    // AR3D.vettore("s1",new THREE.Vector3(2,0,0),{colore:"red"});
+    // AR3D.vettore("s2",new THREE.Vector3(0,2,0),{colore:"green"});
+    // AR3D.vettore("s3",new THREE.Vector3(0,0,2),{colore:"blue"});
      AR3D.retta("r",new THREE.Vector3(0,0,0),new THREE.Vector3(1,-3,1));
+     AR3D.retta("s",new THREE.Vector3(0,0,1),new THREE.Vector3(1,0,1));
+     AR3D.retta("t",new THREE.Vector3(0,0,0),new THREE.Vector3(0,-3,0));
+
      AR3D.piano("p",centro,new THREE.Vector3(1,0,0),new THREE.Vector3(0,0,1),{lato:3,colore:"grey",trasparenza:0})
     // AR3D.cubo("cubo",[1,1,1],1,{coloreFacce:0xff0000});
   </script>
