--- a/edu-video/index.html
+++ b/edu-video/index.html
@@ -7,6 +7,7 @@
 
 <style>*{margin:0;padding:0}body{--toolbar-height:3em;--main-video-width:600px;--text-beside-video-width:600px;--main-color:white;--dark-color:rgb(32, 32, 32);--main-red:red;--sec-red:darkred;--shadow-red:rgb(77, 0, 0);--hiding-screens-color:rgba(0,0,0,.5)}</style><link rel="stylesheet" href="styles.de82a486f4074ccb.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.de82a486f4074ccb.css"></noscript></head>
 <body>
+  <h1>Modifica onlinata??</h1>
   <app-root></app-root>
 <script src="runtime.61b4bce6760ddf19.js" type="module"></script><script src="polyfills.00d0b297de82de0c.js" type="module"></script><script src="main.9b29d6c712472fa8.js" type="module"></script>
 
